# biodenoising-datasets

./: LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
biodenoising_datasets/: run.py
biodenoising_datasets/cfg/: all_datasets.yml  config16.yml  config48.yml  download_eval.yml  validation.yml  with_metadata.yml
biodenoising_datasets/data_preprocessing/: AudioDataset.py  __init__.py  anuran.py  anuraset.py  asa_berlin_reference.py  biodenoising_validation.py  birdvox_night.py  bow_riding.py  carrion_crows_denoising.py  ccmixter_voice.py  coffee_farms.py  coffee_farms_noise.py  dcase_few_shot.py  dcase_few_shot_eval.py  dcase_few_shot_noise.py  deepship.py  demand.py  dolphins_signature_whistles.py  download.py  egyptian_fruit_bats.py  elephant_rumbles_unlabeled.py  fsd50k.py  geladas.py  giant_otters.py  gibbons.py  gibbons_noise.py  gombe_chimpanzee.py  goodsounds.py  hiceas_minke.py  high_sierras.py  high_sierras_noise.py  idmt_traffic.py  infant_marmoset.py  lemur.py  lemur_noise.py  librispeech.py  macaques.py  marsmbari_noise.py  noaa_sanctsound_noise.py  noaa_sanctsound_small_noise.py  (+42 more)
biodenoising_datasets/data_preprocessing/scripts/: carrioncrows.py  shipnoise.sh  south_alaskan_humpback_whales.sh  zebrafinches.py
biodenoising_datasets/scripts/: 01_validset_json.py  02_validset_generate.py
biodenoising_datasets/utils/: __init__.py  pcen.py  svl.py
